# 2026-anomaly-detection

./: .gitignore  AGENTS.md  README.md  demo.py  infer.py  main.py  pyproject.toml
lib/accelerators/: __init__.py
lib/data/: __init__.py  m2ad_datamodule.py  registry.py  transforms.py  visa_datamodule.py
lib/lightning/: __init__.py  anomalydino_module.py  anomalyeupe_module.py  anomalytipsv2_module.py  autoencoder_module.py  callbacks.py  dictas_module.py  dinomaly_module.py  efficientad_module.py  feature_match_module.py  patchcore_module.py  subspacead_module.py  winclip_module.py
lib/models/: __init__.py  anomalydino.py  anomalyeupe.py  anomalytipsv2.py  autoencoder.py  dictas.py  dinomaly.py  efficientad.py  feature_match.py  patchcore.py  subspacead.py  winclip.py
lib/utils/: __init__.py  checkpoint.py  metrics.py  stable_adamw.py
