[project]
name = "iad"
version = "0.1.0"
description = "Industrial Anomaly Detection & Spot-the-Difference"
requires-python = ">=3.11,<3.14"
dependencies = [
    "albumentations>=2.0.8",
    "anomalib>=2.3.0",
    "codecarbon>=3.2.6",
    "datasets>=4.8.4",
    "gradio>=6.12.0",
    "huggingface-hub>=1.5.0",
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.6.2",
    "open-clip-torch>=3.3.0",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.0.0",
    "pandas<3",
    "psutil>=7.0.0",
    "pytorch-lightning>=2.5.6",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.5.3",
]

[project.optional-dependencies]
base = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "triton==3.6.0",
]
xpu = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "triton-xpu==3.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
conflicts = [
    [
        { extra = "base" },
        { extra = "xpu" },
    ],
]

[tool.uv.sources]
torch = [{ index = "pytorch-xpu", extra = "xpu" }]
torchvision = [{ index = "pytorch-xpu", extra = "xpu" }]
triton-xpu = [{ index = "pytorch-xpu", extra = "xpu" }]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
